--- a/index.html
+++ b/index.html
@@ -1,13 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="src/scripts/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aditit Exports</title>
+  <!-- Add favicon here -->
+  <link rel="icon" href="/src/assets/logo.svg" />
+</head>
+
+<body>
+  <header>
+    <div>Animated Sections</div>
+    <div><a href="https://codepen.io/BrianCross/pen/PoWapLP">Original By Brian</a></div>
+  </header>
+  <section class="first">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg one">
+          <h2 class="section-heading">Scroll down</h2>
+        </div>
+      </div>
+    </div>
+  
+  </section>
+  <section class="second">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Animated with GSAP</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="third">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">GreenSock</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="fourth">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Animation platform</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="fifth">
+    <div class="outer">
+      <div class="inner">
+        <div class="bg">
+          <h2 class="section-heading">Keep scrolling</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="carousal">
+    <div class="carousel">
+        <div class="carousel-slide">
+            <img src="https://unsplash.com/photos/4K_x--J2Jbc/download?ixid=M3wxMjA3fDF8MXxhbGx8MXx8fHx8fDJ8fDE2ODUxOTI0Mjh8&force=true&w=1920" alt="image-1">
+            <p class="carousel-text">Your text for image 1</p>
+        </div>
+        <div class="carousel-slide">
+            <img src="https://unsplash.com/photos/hG43B0ZX6vc/download?ixid=M3wxMjA3fDB8MXxhbGx8NTd8fHx8fHwyfHwxNjg1MTk0MjMyfA&force=true&w=1920" alt="image-2">
+            <p class="carousel-text">Your text for image 2</p>
+        </div>
+        <div class="carousel-slide">
+            <img src="https://unsplash.com/photos/gBCMAENwknA/download?ixid=M3wxMjA3fDF8MXxhbGx8OTF8fHx8fHwyfHwxNjg1MTk0MjMxfA&force=true&w=1920" alt="image-3">
+            <p class="carousel-text">Your text for image 3</p>
+        </div>
+    </div>
+</section>
+
+  <section id="product">
+    <!-- Product content goes here -->
+  </section>
+
+  <section id="team">
+    <!-- Team content goes here -->
+  </section>
+
+  <section id="contact">
+    <!-- Contact content goes here -->
+  </section>
+
+  <!-- Container for the Three.js scene -->
+  <div id="app"></div>
+
+  <!-- Vite handles your scripts -->
+  <script type="module" src="/src/scripts/main.js"></script>
+</body>
+
 </html>
