--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 
 <body>
-  <header>
-    <div>Animated Sections</div>
-    <div><a href="https://codepen.io/BrianCross/pen/PoWapLP">Original By Brian</a></div>
+  <header class="navbar">
+    <div class="logo">
+      <img src="/src/assets/logo.svg" alt="Logo">
+
+      <!-- You can replace the SVG code above with your actual logo -->
+    </div>
+    <ul class="nav-links">
+      <li><a href="#product">Product</a></li>
+      <li><a href="#team">Team</a></li>
+      <li><a href="#contact">Contact Us</a></li>
+    </ul>
   </header>
   <section class="first">
     <div class="outer">
@@ -42,11 +50,11 @@
       </div>
     </div>
   </section>
-  <section class="fourth">
+  <section class="forth">
     <div class="outer">
       <div class="inner">
         <div class="bg">
-          <h2 class="section-heading">Animation platform</h2>
+          <h2 class="section-heading">GreenSock</h2>
         </div>
       </div>
     </div>
@@ -55,28 +63,15 @@
     <div class="outer">
       <div class="inner">
         <div class="bg">
-          <h2 class="section-heading">Keep scrolling</h2>
+          <h2 class="section-heading">GreenSock</h2>
         </div>
       </div>
     </div>
   </section>
-  <section id="carousal">
-    <div class="carousel">
-        <div class="carousel-slide">
-            <img src="https://unsplash.com/photos/4K_x--J2Jbc/download?ixid=M3wxMjA3fDF8MXxhbGx8MXx8fHx8fDJ8fDE2ODUxOTI0Mjh8&force=true&w=1920" alt="image-1">
-            <p class="carousel-text">Your text for image 1</p>
-        </div>
-        <div class="carousel-slide">
-            <img src="https://unsplash.com/photos/hG43B0ZX6vc/download?ixid=M3wxMjA3fDB8MXxhbGx8NTd8fHx8fHwyfHwxNjg1MTk0MjMyfA&force=true&w=1920" alt="image-2">
-            <p class="carousel-text">Your text for image 2</p>
-        </div>
-        <div class="carousel-slide">
-            <img src="https://unsplash.com/photos/gBCMAENwknA/download?ixid=M3wxMjA3fDF8MXxhbGx8OTF8fHx8fHwyfHwxNjg1MTk0MjMxfA&force=true&w=1920" alt="image-3">
-            <p class="carousel-text">Your text for image 3</p>
-        </div>
-    </div>
-</section>
+  <section id="canvas">
 
+  </section>
+  
   <section id="product">
     <!-- Product content goes here -->
   </section>
